logs/djangoappengine.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/djangoappengine'...
Listing './lib/python3.5/site-packages/djangoappengine/appstats'...
Compiling './lib/python3.5/site-packages/djangoappengine/boot.py'...
***   File "./lib/python3.5/site-packages/djangoappengine/boot.py", line 199
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djangoappengine/conf'...
Listing './lib/python3.5/site-packages/djangoappengine/conf/project_template'...
Listing './lib/python3.5/site-packages/djangoappengine/conf/project_template/project_name'...
Compiling './lib/python3.5/site-packages/djangoappengine/conf/project_template/settings.py'...
***   File "./lib/python3.5/site-packages/djangoappengine/conf/project_template/settings.py", line 1
    from {{ project_name }}.settings import *
         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djangoappengine/db'...
Compiling './lib/python3.5/site-packages/djangoappengine/db/base.py'...
***   File "./lib/python3.5/site-packages/djangoappengine/db/base.py", line 69
    except OSError, error:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/djangoappengine/db/compiler.py'...
***   File "./lib/python3.5/site-packages/djangoappengine/db/compiler.py", line 73
    except GAEError, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/djangoappengine/db/stubs.py'...
***   File "./lib/python3.5/site-packages/djangoappengine/db/stubs.py", line 151
    except HTTPError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djangoappengine/deferred'...
Listing './lib/python3.5/site-packages/djangoappengine/lib'...
Compiling './lib/python3.5/site-packages/djangoappengine/mail.py'...
***   File "./lib/python3.5/site-packages/djangoappengine/mail.py", line 64
    except (ValueError, aeemail.InvalidEmailError), err:
                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djangoappengine/main'...
Listing './lib/python3.5/site-packages/djangoappengine/management'...
Listing './lib/python3.5/site-packages/djangoappengine/management/commands'...
Compiling './lib/python3.5/site-packages/djangoappengine/management/commands/deploy.py'...
***   File "./lib/python3.5/site-packages/djangoappengine/management/commands/deploy.py", line 40
    print "Running syncdb."
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/djangoappengine/mapreduce'...
Compiling './lib/python3.5/site-packages/djangoappengine/mapreduce/input_readers.py'...
***   File "./lib/python3.5/site-packages/djangoappengine/mapreduce/input_readers.py", line 83
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djangoappengine/tests'...
Compiling './lib/python3.5/site-packages/djangoappengine/utils.py'...
***   File "./lib/python3.5/site-packages/djangoappengine/utils.py", line 16
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djangoappengine-1.7.1.egg-info'...
Listing './lib/python3.5/site-packages/djangotoolbox'...
Listing './lib/python3.5/site-packages/djangotoolbox/db'...
Listing './lib/python3.5/site-packages/djangotoolbox/sites'...
Listing './lib/python3.5/site-packages/djangotoolbox-1.8.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
